<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_query_ticket"
            android:title="@string/menu_query_ticket" />
        <item
            android:id="@+id/nav_query_train"
            android:title="@string/menu_query_train" />
        <item
            android:id="@+id/nav_login"
            android:title="@string/menu_login" />
        <item
            android:id="@+id/nav_register"
            android:title="@string/menu_register" />
    </group>

    <item
        android:id="@+id/nav_myAccount"
        android:title="My Account">
        <menu>
            <item
                android:id="@+id/nav_myTicket"
                android:title="@string/menu_myTicket" />
            <item
                android:id="@+id/nav_logout"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
